2004-12-23  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/javax/swing/plaf/basic/BasicButtonListener.java,
	libraries/javalib/javax/swing/plaf/basic/BasicButtonUI.java:
	Resynced with GNU Classpath.
	
	2004-12-23  Michael Koch  <konqueror@gmx.de>

	* javax/swing/plaf/basic/BasicButtonListener.java
	(BasicButtonListener): New constructor.
	* javax/swing/plaf/basic/BasicButtonUI.java
	(createButtonListener): Usw new BasicButtonListener constructor.

2004-12-23  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/java/awt/image/MemoryImageSource.java:
	Resynced with GNU Classpath.
	
	2004-12-23  Michael Koch  <konqueror@gmx.de>

	* java/awt/image/MemoryImageSource.java: Reformatted.
	
2004-12-23  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/javax/swing/tree/TreeCellEditor.java:
	Resynced with GNU Classpath.
	
	2004-12-23  Michael Koch  <konqueror@gmx.de>

	* javax/swing/tree/TreeCellEditor.java: Refomatted.

2004-12-23  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/verifier/verify-block.c
	(ensureOpstackSizeErrorInVerifyBasicBlock, 
	opstackPeekTBlindErrorInVerifyBasicBlock): No longer 
	inlined. That fixes gcc warnings.

2004-12-22  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/javax/swing/JTable.java:
	Resynced with GNU Classpath.
	
	2004-12-22  Michael Koch  <konqueror@gmx.de>
	    Olga Rodimina  <rodimina@redhat.com>

	* javax/swing/JTable.java
	(editorComp): New field.
	(JTable): Initialize local variables and call updateUI
	(selectionBackground): Make protected.
	(selectionForeground): Likewise.
	(initializeLocalVars): Create default editors and renderers,
	initialize editingColumn, editingRow variables.
	(createDefaultEditors): New Method.
	(createDefaultRenderers): Likewise.
	(createDefaultListSelectionModel): Removed
	(createDefaultSelectionModel): New Method.
	(createDefaultTableHeader): Likewise
	(removeColumn): Likewise.
	(getEditingColumn): Likewise.
	(setEditingColumn): Likewise.
	(getEditingRow): Likewise.